infra/anvilops/anvilops-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anvilops
  namespace: anvilops-dev
spec:
  selector:
    matchLabels:
      app: anvilops
  template:
    metadata:
      labels:
        app: anvilops
    spec:
      containers:
        - name: anvilops
          image: registry.anvil.rcac.purdue.edu/anvilops/anvilops:main-18-5ce2c6c8a2213514349f2c541e615ea85edd9ccf # {"$imagepolicy": "anvilops-dev:anvilops-imagepolicy"}
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            requests:
              memory: 512Mi
              cpu: 512m
            limits:
              memory: 1Gi
              cpu: 1024m
