infra/anvilops/postgres-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: anvilops-postgres
  labels:
    app: anvilops-postgres
spec:
  ports:
    - port: 5432
      name: postgres
  selector:
    app: anvilops-postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: anvilops-postgres
spec:
  selector:
    matchLabels:
      app: anvilops-postgres
  serviceName: anvilops-postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: anvilops-postgres
    spec:
      containers:
        - name: anvilops-postgres
          image: postgres:17
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
              subPath: anvilops-postgres-data
  volumeClaimTemplates:
    - metadata:
        name: db-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: anvil-filesystem
        resources:
          requests:
            storage: 1Gi
