infra/anvilops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anvilops-service
  namespace: anvilops-dev
spec:
  selector:
    app: anvilops
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
